objects/SMS_Log__c.object
<CustomObject>
    <fields>
        <fullName>from__c</fullName>
        <label>from</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>msg__c</fullName>
        <label>msg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to__c</fullName>
        <label>to</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>SMS_Log</label>
    <nameField>
        <label>SMS_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>